--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -117,7 +117,7 @@
     year = {2008},
     month = {07},
     pages = {},
-    title = {Automatic Time Series Forecasting: The forecast Package for R},
+    title = {Automatic time series forecasting: the forecast package for {R}},
     volume = {26},
     journal = {Journal of Statistical Software},
     doi = {10.18637/jss.v027.i03}
@@ -169,6 +169,63 @@
     date = {December 2018},
     note = {\url{https://otexts.org/fpp2/simple-methods.html}, Accessed December 2018},
 }
+
+@article{hindsightbias,
+    author = {Neal J. Roese and Kathleen D. Vohs},
+    title ={Hindsight Bias},
+    journal = {Perspectives on Psychological Science},
+    volume = {7},
+    number = {5},
+    pages = {411-426},
+    year = {2012},
+    doi = {10.1177/1745691612454303},
+    note ={PMID: 26168501},
+    
+    URL = { 
+    https://doi.org/10.1177/1745691612454303
+    
+    },
+    eprint = { 
+    https://doi.org/10.1177/1745691612454303
+    
+    }
+}
+
+@book{hey2014computing,
+    title={The Computing Universe: A Journey through a Revolution},
+    author={Hey, T. and Hey, A.J.G. and P{\'a}pay, G.},
+    isbn={9780521766456},
+    lccn={2014030815},
+    url={https://books.google.ro/books?id=NrMkBQAAQBAJ},
+    year={2014},
+    publisher={Cambridge University Press}
+}
+
+@Manual{rforecastpackage,
+    title = {{forecast}: Forecasting functions for time series and linear models},
+    author = {Rob Hyndman and George Athanasopoulos and Christoph
+    Bergmeir and Gabriel Caceres and Leanne Chhay and Mitchell
+    O'Hara-Wild and Fotios Petropoulos and Slava Razbash and Earo
+    Wang and Farah Yasmeen},
+    year = {2018},
+    note = {R package version 8.4},
+    url = {http://pkg.robjhyndman.com/forecast},
+}
+
+@Misc{RassignOps,
+    author = {R Documentation},
+    title = {Assignment Operators},
+    date = {October 2018},
+    note = {\url{https://www.rdocumentation.org/packages/base/versions/3.5.2/topics/assignOps}, Accessed January 2019},
+}
+
+@Misc{pythongrowth,
+    author = {David Robinson},
+    title = {The Incredible Growth of Python },
+    date = {September 2017},
+    note = {\url{https://stackoverflow.blog/2017/09/06/incredible-growth-python/}, Accessed January 2019},
+}
+
 
 
 \begin{comment}
