--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -226,4 +226,23 @@
     note = {\url{https://stackoverflow.blog/2017/09/06/incredible-growth-python/}, Accessed January 2019},
 }
 
+@Misc{fpp2tspatterns,
+    author = {Rob J Hyndman and George Athanasopoulos},
+    title = {Time series patterns},
+    date = {December 2018},
+    note = {\url{https://otexts.org/fpp2/tspatterns.html}, Accessed December 2018},
+}
 
+@Misc{fpp2seasonalplot,
+    author = {Rob J Hyndman and George Athanasopoulos},
+    title = {Seasonal plots},
+    date = {December 2018},
+    note = {\url{https://otexts.org/fpp2/seasonal-plots.html}, Accessed December 2018},
+}
+
+@Misc{fpp2subseriesplot,
+    author = {Rob J Hyndman and George Athanasopoulos},
+    title = {Seasonal subseries plots},
+    date = {December 2018},
+    note = {\url{https://otexts.org/fpp2/seasonal-subseries-plots.html}, Accessed December 2018},
+}
