written section about stationarity with some examples of non-stationary time series, added a paragraph about ggplot2 and made the images smaller in order to avoid them being pixelated

--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -230,19 +230,26 @@
     author = {Rob J Hyndman and George Athanasopoulos},
     title = {Time series patterns},
     date = {December 2018},
-    note = {\url{https://otexts.org/fpp2/tspatterns.html}, Accessed December 2018},
+    note = {\url{https://otexts.org/fpp2/tspatterns.html}, Accessed January 2019},
 }
 
 @Misc{fpp2seasonalplot,
     author = {Rob J Hyndman and George Athanasopoulos},
     title = {Seasonal plots},
     date = {December 2018},
-    note = {\url{https://otexts.org/fpp2/seasonal-plots.html}, Accessed December 2018},
+    note = {\url{https://otexts.org/fpp2/seasonal-plots.html}, Accessed January 2019},
 }
 
 @Misc{fpp2subseriesplot,
     author = {Rob J Hyndman and George Athanasopoulos},
     title = {Seasonal subseries plots},
     date = {December 2018},
-    note = {\url{https://otexts.org/fpp2/seasonal-subseries-plots.html}, Accessed December 2018},
+    note = {\url{https://otexts.org/fpp2/seasonal-subseries-plots.html}, Accessed January 2019},
+}
+
+@Misc{fpp2stationarity,
+    author = {Rob J Hyndman and George Athanasopoulos},
+    title = {Stationarity and differencing},
+    date = {December 2018},
+    note = {\url{https://otexts.org/fpp2/stationarity.html}, Accessed January 2019},
 }
